--- a/signup.html
+++ b/signup.html
@@ -43,6 +43,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
+    <link rel="icon" href="favicon.ico">
   </head>
   <body class="text-center">
 
